# I2P-I-2024_FinalProject

./: .gitignore  CMakeLists.txt  README.md  setup_MacOS_Linux.sh  setup_Windows.ps1
Final_Codes/: Makefile  UI.c  bullet.c  bullet.h  enemy.h  game.c  game.h  game_scene.h  loading_scene.c  map.c  setting_scene.c  utility.c  weapon.c
Final_Codes/Assets/: map0.txt
Final_Codes_XCode16/: README.md  UI.h  enemy.c  game.c  game_scene.c  loading_scene.c  loading_scene.h  main.c  map.c  map.h  menu_scene.c  menu_scene.h  player.c  player.h  setting_scene.c  setting_scene.h  utility.c  utility.h  weapon.c  weapon.h
Final_Codes_XCode16/Assets/: map0.txt
docs/: README.md  cmake.md
